# ucircle

./: README.md  main.py  pyproject.toml
docs/: JunoTakano-AlgoritmoCicloTrigonometrico-TAMC.typ
ucircle/: render.py  test.py
